--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,23 +31,71 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">19.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">299.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
+<tr><th colspan="4">Default test &#8212; failed (configuration methods)</th></tr>
+<tr class="failedodd"><td rowspan="1">com.techaviator.demo.ScenarioComponents.RediffUserLogin</td><td><a href="#m1"><b>tearDown</b>  </a></td><td class="numi">1</td><td>1497191853785</td><td class="numi">0</td></tr>
 <tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.techaviator.demo.ScenarioComponents.RediffUserLogin</td><td><a href="#m1"><b>userLogin_Valid</b>  </a></td><td class="numi">1</td><td>1497163397262</td><td class="numi">2276</td></tr>
+<tr class="failedodd"><td rowspan="1">com.techaviator.demo.ScenarioComponents.RediffUserLogin</td><td><a href="#m2"><b>userLogin_Valid</b>  </a></td><td class="numi">1</td><td>1497191649271</td><td class="numi">198583</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">com.techaviator.demo.ScenarioComponents.RediffUserLogin:userLogin_Valid</h2>
+<h2 id="m1">com.techaviator.demo.ScenarioComponents.RediffUserLogin:tearDown</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th></tr>
+<tr class="param stripe"><td>[TestResult name=userLogin_Valid status=FAILURE method=RediffUserLogin.userLogin_Valid(java.util.Map)[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95] output={null}]</td>
+</tr>
+<tr><td style="padding-left:3em" colspan="1">
+<p>The FirefoxDriver cannot be used after quit() was called.
+Build info: version: &apos;2.53.1&apos;, revision: &apos;a36b8b1cd5757287168e54b817830adce9b0158d&apos;, time: &apos;2016-06-30 19:26:09&apos;
+System info: host: &apos;JALGAR2&apos;, ip: &apos;192.168.244.1&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_111&apos;
+Driver info: driver.version: FirefoxDriver</p>
+org.openqa.selenium.firefox.FirefoxDriver$LazyCommandExecutor.execute(FirefoxDriver.java:377)
+<br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:644)
+<br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:701)
+<br/>at org.openqa.selenium.firefox.FirefoxDriver.getScreenshotAs(FirefoxDriver.java:341)
+<br/>at com.techaviator.demo.GenericComponents.RediffBaseClass.takeScreenShot(RediffBaseClass.java:80)
+<br/>at com.techaviator.demo.GenericComponents.RediffBaseClass.tearDown(RediffBaseClass.java:187)
+<br/>at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+<br/>at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+<br/>at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+<br/>at java.lang.reflect.Method.invoke(Method.java:498)
+<br/>at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)
+<br/>at org.testng.internal.Invoker.invokeConfigurationMethod(Invoker.java:564)
+<br/>at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:213)
+<br/>at org.testng.internal.Invoker.invokeMethod(Invoker.java:786)
+<br/>at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)
+<br/>at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)
+<br/>at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)
+<br/>at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)
+<br/>at org.testng.TestRunner.privateRun(TestRunner.java:767)
+<br/>at org.testng.TestRunner.run(TestRunner.java:617)
+<br/>at org.testng.SuiteRunner.runTest(SuiteRunner.java:334)
+<br/>at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)
+<br/>at org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)
+<br/>at org.testng.SuiteRunner.run(SuiteRunner.java:240)
+<br/>at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+<br/>at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
+<br/>at org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)
+<br/>at org.testng.TestNG.runSuitesLocally(TestNG.java:1123)
+<br/>at org.testng.TestNG.run(TestNG.java:1031)
+<br/>at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
+<br/>at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:236)
+<br/>at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:81)
+<br/>1 lines not shown
+</td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">com.techaviator.demo.ScenarioComponents.RediffUserLogin:userLogin_Valid</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th></tr>
 <tr class="param stripe"><td>{TC_Order=1.0, UserName=rajutest.2017@rediffmail.com, ExpectedResult=Raju, TC_ID=GB_07, TC_Execute=Y, TC_Script=Valid, Password=password}</td>
 </tr>
 <tr><td style="padding-left:3em" colspan="1">
 <p>null</p>
-com.techaviator.demo.GenericComponents.RediffBaseClass.containsFullImageValidation(RediffBaseClass.java:134)
-<br/>at com.techaviator.demo.ScenarioComponents.RediffUserLogin.userLogin_Valid(RediffUserLogin.java:47)
+com.techaviator.demo.GenericComponents.RediffBaseClass.equalsFullImageValidation(RediffBaseClass.java:159)
+<br/>at com.techaviator.demo.ScenarioComponents.RediffUserLogin.userLogin_Valid(RediffUserLogin.java:48)
 <br/>25 lines not shown
 </td></tr>
 </table>
