--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c87b81">  <td>17/06/11 12:13:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RediffUserLogin.beforeMethod()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="c87b81">  <td>17/06/11 20:04:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RediffUserLogin.beforeMethod()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>17/06/11 12:13:05</td>   <td>-11782</td> <td title="&gt;&gt;RediffBaseClass.beforeSuite()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&gt;&gt;beforeSuite</td> 
+<tr bgcolor="80ebad">  <td>17/06/11 20:02:33</td>   <td>-95511</td> <td title="&gt;&gt;RediffBaseClass.beforeSuite()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>17/06/11 12:13:06</td>   <td>-10890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RediffBaseClass.launchApplication()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&gt;&gt;launchApplication</td> 
+<tr bgcolor="80ebad">  <td>17/06/11 20:02:34</td>   <td>-94549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RediffBaseClass.launchApplication()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&gt;&gt;launchApplication</td> 
 <td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>17/06/11 12:13:19</td>   <td>2318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RediffBaseClass.tearDown()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&lt;&lt;tearDown</td> 
+<tr bgcolor="80ebad">  <td>17/06/11 20:07:27</td>   <td>198598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RediffBaseClass.tearDown()[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>17/06/11 12:13:17</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RediffUserLogin.userLogin_Valid(java.util.Map)[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">userLogin_Valid</td> 
+<tr bgcolor="80ebad">  <td>17/06/11 20:07:33</td>   <td>204514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RediffBaseClass.tearDown(org.testng.ITestResult)[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>17/06/11 20:04:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RediffUserLogin.userLogin_Valid(java.util.Map)[pri:0, instance:com.techaviator.demo.ScenarioComponents.RediffUserLogin@6093dd95]">userLogin_Valid</td> 
   <td>main@1926764753</td>   <td></td> </tr>
 </table>
